# meta

./: .dockerignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: app.py  environment.py  requirements.txt
tests/: test_environment.py
